Added erasers, buttons, and centered.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   
+    <div class="title"><strong>Etch-a-Sketch</strong></div>
+<div class="buttons">
     <button id="button">Change Size</button>
+    <button id="black">Black</button>
+    <button id="randomColors">Random Colors</button>
+    <button id="erase">Erase</button>
+    <button id="eraseAll">Erase All</button>
+ </div>
     <div id="container"></div>
+ 
 <script src="script.js">
 </script>  
 </body>
